src/nuklear_win32.zig

pub const struct_nk_user_font = extern struct {
    userdata: nk_handle,
    height: f32,
    width: nk_text_width_f,
    query: nk_query_font_glyph_f,
    texture: nk_handle,
};
pub const NK_PANEL_NONE: c_int = 0;
pub const NK_PANEL_WINDOW: c_int = 1;
pub const NK_PANEL_GROUP: c_int = 2;
pub const NK_PANEL_POPUP: c_int = 4;
pub const NK_PANEL_CONTEXTUAL: c_int = 16;
pub const NK_PANEL_COMBO: c_int = 32;
pub const NK_PANEL_MENU: c_int = 64;
pub const NK_PANEL_TOOLTIP: c_int = 128;
pub const enum_nk_panel_type = c_uint;
pub const struct_nk_scroll = extern struct {
    x: nk_uint,
    y: nk_uint,
};
pub const struct_nk_menu_state = extern struct {
    x: f32,
    y: f32,
    w: f32,
    h: f32,
    offset: struct_nk_scroll,
};
pub const NK_LAYOUT_DYNAMIC_FIXED: c_int = 0;
pub const NK_LAYOUT_DYNAMIC_ROW: c_int = 1;
pub const NK_LAYOUT_DYNAMIC_FREE: c_int = 2;
pub const NK_LAYOUT_DYNAMIC: c_int = 3;
pub const NK_LAYOUT_STATIC_FIXED: c_int = 4;
pub const NK_LAYOUT_STATIC_ROW: c_int = 5;
pub const NK_LAYOUT_STATIC_FREE: c_int = 6;
pub const NK_LAYOUT_STATIC: c_int = 7;
pub const NK_LAYOUT_TEMPLATE: c_int = 8;
pub const NK_LAYOUT_COUNT: c_int = 9;
pub const enum_nk_panel_row_layout_type = c_uint;
pub const struct_nk_row_layout = extern struct {
    type: enum_nk_panel_row_layout_type,
    index: c_int,
    height: f32,
    min_height: f32,
    columns: c_int,
    ratio: [*c]const f32,
    item_width: f32,
    item_height: f32,
    item_offset: f32,
    filled: f32,
    item: struct_nk_rect,
    tree_depth: c_int,
    templates: [16]f32,
};
pub const NK_CHART_LINES: c_int = 0;
pub const NK_CHART_COLUMN: c_int = 1;
pub const NK_CHART_MAX: c_int = 2;
pub const enum_nk_chart_type = c_uint;
pub const struct_nk_chart_slot = extern struct {
    type: enum_nk_chart_type,
    color: struct_nk_color,
    highlight: struct_nk_color,
    min: f32,
    max: f32,
    range: f32,
    count: c_int,
    last: struct_nk_vec2,
    index: c_int,
};
pub const struct_nk_chart = extern struct {
    slot: c_int,
    x: f32,
    y: f32,
    w: f32,
    h: f32,
    slots: [4]struct_nk_chart_slot,
};
pub const struct_nk_panel = extern struct {
    type: enum_nk_panel_type,
    flags: nk_flags,
    bounds: struct_nk_rect,
    offset_x: [*c]nk_uint,
    offset_y: [*c]nk_uint,
    at_x: f32,
    at_y: f32,
    max_x: f32,
    footer_height: f32,
    header_height: f32,
    border: f32,
    has_scrolling: c_uint,
    clip: struct_nk_rect,
    menu: struct_nk_menu_state,
    row: struct_nk_row_layout,
    chart: struct_nk_chart,
    buffer: [*c]struct_nk_command_buffer,
    parent: [*c]struct_nk_panel,
};
pub const struct_nk_key = extern struct {
    down: nk_bool,
    clicked: c_uint,
};
pub const struct_nk_keyboard = extern struct {
    keys: [30]struct_nk_key,
    text: [16]u8,
    text_len: c_int,
};
pub const struct_nk_mouse_button = extern struct {
    down: nk_bool,
    clicked: c_uint,
    clicked_pos: struct_nk_vec2,
};
pub const struct_nk_mouse = extern struct {
    buttons: [4]struct_nk_mouse_button,
    pos: struct_nk_vec2,
    prev: struct_nk_vec2,
    delta: struct_nk_vec2,
    scroll_delta: struct_nk_vec2,
    grab: u8,
    grabbed: u8,
    ungrab: u8,
};
pub const struct_nk_input = extern struct {
    keyboard: struct_nk_keyboard,
    mouse: struct_nk_mouse,
};
pub const struct_nk_cursor = extern struct {
    img: struct_nk_image,
    size: struct_nk_vec2,
    offset: struct_nk_vec2,
};
pub const struct_nk_style_text = extern struct {
    color: struct_nk_color,
    padding: struct_nk_vec2,
};
pub const struct_nk_style_button = extern struct {
    normal: struct_nk_style_item,
    hover: struct_nk_style_item,
    active: struct_nk_style_item,
    border_color: struct_nk_color,
    text_background: struct_nk_color,
    text_normal: struct_nk_color,
    text_hover: struct_nk_color,
    text_active: struct_nk_color,
    text_alignment: nk_flags,
    border: f32,
    rounding: f32,
    padding: struct_nk_vec2,
    image_padding: struct_nk_vec2,
    touch_padding: struct_nk_vec2,
    userdata: nk_handle,
    draw_begin: ?fn ([*c]struct_nk_command_buffer, nk_handle) callconv(.C) void,
    draw_end: ?fn ([*c]struct_nk_command_buffer, nk_handle) callconv(.C) void,
};
pub const struct_nk_style_toggle = extern struct {
    normal: struct_nk_style_item,
    hover: struct_nk_style_item,
    active: struct_nk_style_item,
    border_color: struct_nk_color,
    cursor_normal: struct_nk_style_item,
    cursor_hover: struct_nk_style_item,
    text_normal: struct_nk_color,
    text_hover: struct_nk_color,
    text_active: struct_nk_color,
    text_background: struct_nk_color,
    text_alignment: nk_flags,
    padding: struct_nk_vec2,
    touch_padding: struct_nk_vec2,
    spacing: f32,
    border: f32,
    userdata: nk_handle,
    draw_begin: ?fn ([*c]struct_nk_command_buffer, nk_handle) callconv(.C) void,
    draw_end: ?fn ([*c]struct_nk_command_buffer, nk_handle) callconv(.C) void,
};
pub const struct_nk_style_selectable = extern struct {
    normal: struct_nk_style_item,
    hover: struct_nk_style_item,
    pressed: struct_nk_style_item,
    normal_active: struct_nk_style_item,
    hover_active: struct_nk_style_item,
    pressed_active: struct_nk_style_item,
    text_normal: struct_nk_color,
    text_hover: struct_nk_color,
    text_pressed: struct_nk_color,
    text_normal_active: struct_nk_color,
    text_hover_active: struct_nk_color,
    text_pressed_active: struct_nk_color,
    text_background: struct_nk_color,
    text_alignment: nk_flags,
    rounding: f32,
    padding: struct_nk_vec2,
    touch_padding: struct_nk_vec2,
    image_padding: struct_nk_vec2,
    userdata: nk_handle,
    draw_begin: ?fn ([*c]struct_nk_command_buffer, nk_handle) callconv(.C) void,
    draw_end: ?fn ([*c]struct_nk_command_buffer, nk_handle) callconv(.C) void,
};
pub const NK_SYMBOL_NONE: c_int = 0;
pub const NK_SYMBOL_X: c_int = 1;
pub const NK_SYMBOL_UNDERSCORE: c_int = 2;
pub const NK_SYMBOL_CIRCLE_SOLID: c_int = 3;
pub const NK_SYMBOL_CIRCLE_OUTLINE: c_int = 4;
pub const NK_SYMBOL_RECT_SOLID: c_int = 5;
pub const NK_SYMBOL_RECT_OUTLINE: c_int = 6;
pub const NK_SYMBOL_TRIANGLE_UP: c_int = 7;
pub const NK_SYMBOL_TRIANGLE_DOWN: c_int = 8;
pub const NK_SYMBOL_TRIANGLE_LEFT: c_int = 9;
pub const NK_SYMBOL_TRIANGLE_RIGHT: c_int = 10;
pub const NK_SYMBOL_PLUS: c_int = 11;
pub const NK_SYMBOL_MINUS: c_int = 12;
pub const NK_SYMBOL_MAX: c_int = 13;
pub const enum_nk_symbol_type = c_uint;
pub const struct_nk_style_slider = extern struct {
    normal: struct_nk_style_item,
    hover: struct_nk_style_item,
    active: struct_nk_style_item,
    border_color: struct_nk_color,
    bar_normal: struct_nk_color,
    bar_hover: struct_nk_color,
    bar_active: struct_nk_color,
    bar_filled: struct_nk_color,
    cursor_normal: struct_nk_style_item,
    cursor_hover: struct_nk_style_item,
    cursor_active: struct_nk_style_item,
    border: f32,
    rounding: f32,
    bar_height: f32,
    padding: struct_nk_vec2,
    spacing: struct_nk_vec2,
    cursor_size: struct_nk_vec2,
    show_buttons: c_int,
    inc_button: struct_nk_style_button,
    dec_button: struct_nk_style_button,
    inc_symbol: enum_nk_symbol_type,
    dec_symbol: enum_nk_symbol_type,
    userdata: nk_handle,
    draw_begin: ?fn ([*c]struct_nk_command_buffer, nk_handle) callconv(.C) void,
    draw_end: ?fn ([*c]struct_nk_command_buffer, nk_handle) callconv(.C) void,
};
pub const struct_nk_style_progress = extern struct {
    normal: struct_nk_style_item,
    hover: struct_nk_style_item,
    active: struct_nk_style_item,
    border_color: struct_nk_color,
    cursor_normal: struct_nk_style_item,
    cursor_hover: struct_nk_style_item,
    cursor_active: struct_nk_style_item,
    cursor_border_color: struct_nk_color,
    rounding: f32,
    border: f32,
    cursor_border: f32,
    cursor_rounding: f32,
    padding: struct_nk_vec2,
    userdata: nk_handle,
    draw_begin: ?fn ([*c]struct_nk_command_buffer, nk_handle) callconv(.C) void,
    draw_end: ?fn ([*c]struct_nk_command_buffer, nk_handle) callconv(.C) void,
};
pub const struct_nk_style_scrollbar = extern struct {
    normal: struct_nk_style_item,
    hover: struct_nk_style_item,
    active: struct_nk_style_item,
    border_color: struct_nk_color,
    cursor_normal: struct_nk_style_item,
    cursor_hover: struct_nk_style_item,
    cursor_active: struct_nk_style_item,
    cursor_border_color: struct_nk_color,
    border: f32,
    rounding: f32,
    border_cursor: f32,
    rounding_cursor: f32,
    padding: struct_nk_vec2,
    show_buttons: c_int,
    inc_button: struct_nk_style_button,
    dec_button: struct_nk_style_button,
    inc_symbol: enum_nk_symbol_type,
    dec_symbol: enum_nk_symbol_type,
    userdata: nk_handle,
    draw_begin: ?fn ([*c]struct_nk_command_buffer, nk_handle) callconv(.C) void,
    draw_end: ?fn ([*c]struct_nk_command_buffer, nk_handle) callconv(.C) void,
};
pub const struct_nk_style_edit = extern struct {
    normal: struct_nk_style_item,
    hover: struct_nk_style_item,
    active: struct_nk_style_item,
    border_color: struct_nk_color,
    scrollbar: struct_nk_style_scrollbar,
    cursor_normal: struct_nk_color,
    cursor_hover: struct_nk_color,
    cursor_text_normal: struct_nk_color,
    cursor_text_hover: struct_nk_color,
    text_normal: struct_nk_color,
    text_hover: struct_nk_color,
    text_active: struct_nk_color,
    selected_normal: struct_nk_color,
    selected_hover: struct_nk_color,
    selected_text_normal: struct_nk_color,
    selected_text_hover: struct_nk_color,
    border: f32,
    rounding: f32,
    cursor_size: f32,
    scrollbar_size: struct_nk_vec2,
    padding: struct_nk_vec2,
    row_padding: f32,
};
pub const struct_nk_style_property = extern struct {
    normal: struct_nk_style_item,
    hover: struct_nk_style_item,
    active: struct_nk_style_item,
    border_color: struct_nk_color,
    label_normal: struct_nk_color,
    label_hover: struct_nk_color,
    label_active: struct_nk_color,
    sym_left: enum_nk_symbol_type,
    sym_right: enum_nk_symbol_type,
    border: f32,
    rounding: f32,
    padding: struct_nk_vec2,
    edit: struct_nk_style_edit,
    inc_button: struct_nk_style_button,
    dec_button: struct_nk_style_button,
    userdata: nk_handle,
    draw_begin: ?fn ([*c]struct_nk_command_buffer, nk_handle) callconv(.C) void,
    draw_end: ?fn ([*c]struct_nk_command_buffer, nk_handle) callconv(.C) void,
};
pub const struct_nk_style_chart = extern struct {
    background: struct_nk_style_item,
    border_color: struct_nk_color,
    selected_color: struct_nk_color,
    color: struct_nk_color,
    border: f32,
    rounding: f32,
    padding: struct_nk_vec2,
};
pub const struct_nk_style_tab = extern struct {
    background: struct_nk_style_item,
    border_color: struct_nk_color,
    text: struct_nk_color,
    tab_maximize_button: struct_nk_style_button,
    tab_minimize_button: struct_nk_style_button,
    node_maximize_button: struct_nk_style_button,
    node_minimize_button: struct_nk_style_button,
    sym_minimize: enum_nk_symbol_type,
    sym_maximize: enum_nk_symbol_type,
    border: f32,
    rounding: f32,
    indent: f32,
    padding: struct_nk_vec2,
    spacing: struct_nk_vec2,
};
pub const struct_nk_style_combo = extern struct {
    normal: struct_nk_style_item,
    hover: struct_nk_style_item,
    active: struct_nk_style_item,
    border_color: struct_nk_color,
    label_normal: struct_nk_color,
    label_hover: struct_nk_color,
    label_active: struct_nk_color,
    symbol_normal: struct_nk_color,
    symbol_hover: struct_nk_color,
    symbol_active: struct_nk_color,
    button: struct_nk_style_button,
    sym_normal: enum_nk_symbol_type,
    sym_hover: enum_nk_symbol_type,
    sym_active: enum_nk_symbol_type,
    border: f32,
    rounding: f32,
    content_padding: struct_nk_vec2,
    button_padding: struct_nk_vec2,
    spacing: struct_nk_vec2,
};
pub const NK_HEADER_LEFT: c_int = 0;
pub const NK_HEADER_RIGHT: c_int = 1;
